# Breakout

examples/demo1_window/: CMakeLists.txt  demo1.fs  demo1.vs  frame.fs  frame.vs  main.cpp  t.vs  tt.fs
resources/shader/demo1/: demo1.fs
src/: Game.cpp  Game.h
src/block/: BallObject.cpp  BallObject.h  GameObject.cpp  GameObject.h  PowerUp.h
src/levels/: GameLevel.cpp  GameLevel.h
src/render/: ParticleGenerator.cpp  ParticleGenerator.h  SpriteRenderer.cpp  SpriteRenderer.h
src/tools/: PostProcessor.cpp  PostProcessor.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
